# First-order-Kuramoto

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.py
plot/: density_evo.py  order_parameter_evo.py  plotting.py
saved_order_parameters/: a  b  bb  c  cc  saaa
simulation_engine/: engine_one  engine_two
simulation_engine/include/: finite_difference.h  initial_conditions.h  order_parameter.h  parameters_one.h  parameters_two.h  saving_density.h
simulation_engine/src/: engine_one.cpp  engine_two.cpp  main.cpp
simulation_engine/src/numerical_scheme/: finite_difference.cpp  order_parameter.cpp
simulation_engine/src/saving/: saving_density.cpp  saving_r.cpp
simulation_engine/src/simulation_parameters/: initial_conditions.cpp  parameters_one.cpp  parameters_two.cpp
simulation_one/: simulation_one
simulation_one/src/: simulation_one_engine.cpp  simulation_two_engine.cpp
simulation_one/src/simulation_parameters/: parameters_two.cpp
simulation_two/: simulation_two
